# ai-vital-flow-medicine

./: .env  .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md  start_ai_server.py
ai_server/: advanced_models.py  main.py  requirements.txt  start_server.sh
attached_assets/: Pasted-PROJETO-VitalFlow-AI-Painel-de-Otimiza-o-Predicativa-para-Fluxo-e-Risco-de-Pacientes-OBJETIVO-P-1752581251009_1752581251010.txt  Pasted-com-base-nisso-VitalFlow-AI-A-Plataforma-de-Otimiza-o-Hospitalar-do-Futuro-Resumo-Executivo-Vit-1752624898172_1752624898173.txt
client/src/: App.tsx  index.css
client/src/components/charts/: patient-flow-chart.tsx  vital-signs-chart.tsx
client/src/components/dashboard/: ai-insights.tsx  ai-predictions-advanced.tsx  bed-occupancy.tsx  overview-cards.tsx  recent-activities.tsx  risk-predictions.tsx
client/src/components/layout/: header.tsx  sidebar.tsx
client/src/lib/: api.ts  mock-data.ts  queryClient.ts
client/src/pages/: admissions.tsx  ai-strategy.tsx  analytics.tsx  anomalies.tsx  beds.tsx  causal-ai.tsx  dashboard.tsx  digital-twin.tsx  discharges.tsx  emergency.tsx  executive-dashboard.tsx  flow-prediction.tsx  iot-integration.tsx  patient-details.tsx  patients.tsx  predictions.tsx  reports.tsx  risk-analysis.tsx
server/: index.ts  routes.ts  storage.ts
server/services/: aiClient.ts  aiPredictions.ts  gemini.ts  openai.ts
shared/: schema.ts
